Bug 774813 - Bug 774139 will break Qt builds due to #define signals. r=cjones